2012-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Fix build dependencies in Swilena.

	* python/Makefile.am (image2d_point2d-wrap.cc): Depend on
	$(top_srcdir)/swilena/concat.ixx.

2012-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Comment on an issue of Swilena highlighted by max-tree.py.

	* python/max-tree.py: Here.

2012-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Update the local (build-time) Swilena Python Shell.

	* python/sps-local.in (PYTHONPATH): Add `@abs_builddir@/.libs'.

2012-07-27  Roland Levillain  <roland@lrde.epita.fr>

	Get rid of `ltihooks' in Swilena.

	* python/ltihooks.py: Remove.
	* python/Makefile.am (python_PYTHON): Remove ltihooks.py.
	* python/swilena.py: No longer import `ltihooks'.
	* run.in: Help Python find actual dynamic modules in directory
	`.libs', as suggested by Alexandre Duret-Lutz in
	http://stackoverflow.com/a/5125879/1551751.

2010-12-03  Roland Levillain  <roland@lrde.epita.fr>

	Perform install tests in Swilena.

	* python/installcheck.mk: New.
	Include it...
	* python/Makefile.am: ...here.
	(run_install_test_verbose, run_install_test_verbose_)
	(run_install_test_verbose_0)
	(INSTALL_TESTS_ENVIRONMENT, INSTALL_TESTS):
	New variables.

2010-06-02  Roland Levillain  <roland@lrde.epita.fr>

	Fix cleaning rules.

	* python/Makefile.am (CLEANFILES): Add data.py[co].

2010-01-06  Roland Levillain  <roland@lrde.epita.fr>

	Fix the generation of the sps scripts.

	* python/Makefile.am (sps, sps-local): Remove a stray slash.
	Fix permissions.

2010-05-28  Roland Levillain  <roland@lrde.epita.fr>

	Generate python/data.py.

	* python/data.py: Rename as...
	* python/data.py.in: ...this.
	Adjust.
	Turn top_srcdir into a variable substituted by configure.
	* python/Makefile.am (EXTRA_DIST): s/data.py/data.py.in/.
	* python/Makefile.am (all-local): New rule.
	Depend on data.py.
	(edit): Substitute top_srcdir.
	(data.py): New rule.
	(CLEANFILES): Add data.py.