@@ -1,5 +1,15 @@
 2012-08-28  Roland Levillain  <roland@lrde.epita.fr>
 
+	Add sps-gdb-local, a script to run the Swilena Python Shell in GDB.
+
+	* python/sps-gdb-local.in: New.
+	* python/Makefile.am (edit): Also substitute @LIBTOOL@.
+	(noinst_SCRIPTS): Add sps-gdb-local.
+	(EXTRA_DIST): Add sps-gdb-local.in.
+	(sps-gdb-local): Adda a dependency on $(srcdir)/sps-gdb-local.in.
+
+2012-08-28  Roland Levillain  <roland@lrde.epita.fr>
+
 	Fix build dependencies in Swilena.
 
 	* python/Makefile.am (image2d_point2d-wrap.cc): Depend on
